pacman-app/app/overlays/aks/pacman-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: pacman-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   resource:
  #     apiGroup: v1
  #     kind: Service
  #     name: pacman
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pacman
            port:
              number: 80
